# tulpa

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
tulpa/: cli.py  commands.py  config.py  gamelist.py  settings.py  utils.py
tulpa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tulpa/datasets/: builder.py  companies_dataset.py  company_dataset.py  games_dataset.py  import_dataset.py  releases_dataset.py  sample_dataset.py  samples_dataset.py
tulpa/visualizations/: credits_network.py  games_data_table.py  release_timeline.py  staff_heatmap.py  staff_size.py
tulpa/visualizations/templates/: games_data_table.html  release_vis.html
